# frclib-unofficial-phoenix6

./: Cargo.toml  README.md
ctre-phoenix6-sys/: Cargo.toml  build.rs  wrapper.h
ctre-phoenix6-sys/ctre/phoenix/: PhoenixVersion.h
ctre-phoenix6-sys/ctre/phoenix/cci/: Diagnostics_CCI.h
ctre-phoenix6-sys/ctre/phoenix6/: Utils.h
ctre-phoenix6-sys/ctre/phoenix6/networking/interfaces/: ConfigSerializer.h  Configs_Interface.h  Control_Interface.h  DeviceEncoding_Interface.h  ReportError_Interface.h  SpnUpdatePeriod_Interface.h  StatusGetter_Simplified_Interface.h
ctre-phoenix6-sys/ctre/phoenix6/platform/: platform_c_style.h
ctre-phoenix6-sys/ctre/phoenix6/unmanaged/: unmanaged_c_style.h
ctre-phoenix6-sys/src/: bindings.rs  lib.rs
src/: controls.rs  error.rs  lib.rs  spn.rs
src/devices/: config_native.rs  mod.rs
src/devices/cancoder/: config.rs  mod.rs  signals.rs
src/devices/pigeon/: config.rs  mod.rs  signals.rs
src/signals/: logger.rs  mod.rs  native.rs  queue_thread.rs  types.rs
