[package]
name = "ctre-phoenix6-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frclib-core = { version = "0.2", features = ["full"] }
frclib = { path = "../frclib"}
parking_lot = "0.12.1"
thiserror = "1.0.53"
ctre-phoenix6-sys = { version = "0.1.0", path = "./ctre-phoenix6-sys" }
num_enum = "0.7.1"
paste = "1.0.14"
once_cell = "1.19.0"
flume = "0.11.0"
cfg-if = "1.0.0"


[package.metadata.frc]
vendor = true
default-check = "real"
